# mcvrp

./: .gitignore  CMakeLists.txt  README.md  datasets_scale.txt
ca_ilp/: main.cpp
ca_ilp/parser/: cvrp_parser.cpp  cvrp_parser.hpp
ca_ilp/solver/: ca_solver.cpp  ca_solver.hpp
ca_ilp/utils/: types.hpp  utils.cpp  utils.hpp
ca_mis/: cvrp_ca_mis_fixed.cpp  main.cpp
ca_mis/parser/: cvrp_parser.cpp  cvrp_parser.hpp
ca_mis/solver/: ca_mis_solver.cpp  ca_mis_solver.hpp
ca_mis/utils/: types.hpp  utils.cpp  utils.hpp
cluster_first/experiments/: scenario1.cpp  scenario2.cpp  scenario3.cpp  scenario3_incomp.cpp
cluster_first/parser/: datasets_parser.cpp  datasets_parser.hpp  json_parser.hpp
cluster_first/utils/: cluster_first_helpers.cpp  cluster_first_helpers.hpp  edge_filters.cpp  edge_filters.hpp  types.hpp  utils.hpp
combinatorial_auction/: cvrp_ca_optimized.cpp
match_first/experiments/: scenario1.cpp  scenario2.cpp  scenario3.cpp
match_first/graph/: graph.cpp  graph.hpp
match_first/parser/: datasets_parser.cpp  datasets_parser.hpp  json_parser.cpp
match_first/solver/: solver.cpp  solver.hpp
match_first/utils/: match_first_helpers.cpp  match_first_helpers.hpp  utils.hpp
results/base/: ca_ilp_scenario1.csv  ca_ilp_scenario2.csv  ca_ilp_scenario3.csv  ca_mis_scenario1.csv  ca_mis_scenario2.csv  ca_mis_scenario3.csv  cluster_first_scenario1.csv  cluster_first_scenario2.csv  cluster_first_scenario3.csv  match_first_scenario1.csv  match_first_scenario2.csv  match_first_scenario3.csv  summary.csv
results/capacity/: series_ca_ilp_scenario1.csv  series_ca_ilp_scenario2.csv  series_ca_ilp_scenario3.csv  series_ca_mis_scenario1.csv  series_ca_mis_scenario2.csv  series_ca_mis_scenario3.csv  series_cluster_first_scenario1.csv  series_cluster_first_scenario2.csv  series_cluster_first_scenario3.csv  series_match_first_scenario1.csv  series_match_first_scenario2.csv  series_match_first_scenario3.csv  summary.csv
results/scalability/: ca_mis_scenario1.csv  ca_mis_scenario3.csv  cluster_first_scenario1.csv  cluster_first_scenario2.csv  cluster_first_scenario3.csv  match_first_scenario1.csv  match_first_scenario2.csv  match_first_scenario3.csv  summary.csv
sample_output/ca_ilp/: final_output.csv
sample_output/ca_ilp/scenario1/: sc_1_combined.csv  sc_1_ds_1.csv  sc_1_ds_10.csv  sc_1_ds_100.csv  sc_1_ds_11.csv  sc_1_ds_12.csv  sc_1_ds_13.csv  sc_1_ds_14.csv  sc_1_ds_15.csv  sc_1_ds_16.csv  sc_1_ds_17.csv  sc_1_ds_18.csv  sc_1_ds_19.csv  sc_1_ds_2.csv  sc_1_ds_20.csv  sc_1_ds_21.csv  sc_1_ds_22.csv  sc_1_ds_23.csv  sc_1_ds_24.csv  sc_1_ds_25.csv  sc_1_ds_26.csv  sc_1_ds_27.csv  sc_1_ds_28.csv  sc_1_ds_29.csv  sc_1_ds_3.csv  sc_1_ds_30.csv  sc_1_ds_31.csv  sc_1_ds_32.csv  sc_1_ds_33.csv  sc_1_ds_34.csv  sc_1_ds_35.csv  sc_1_ds_36.csv  sc_1_ds_37.csv  sc_1_ds_38.csv  sc_1_ds_39.csv  sc_1_ds_4.csv  sc_1_ds_40.csv  sc_1_ds_41.csv  sc_1_ds_42.csv  sc_1_ds_43.csv  (+61 more)
sample_output/ca_ilp/scenario2/: sc_2_combined.csv  sc_2_ds_1.csv  sc_2_ds_10.csv  sc_2_ds_100.csv  sc_2_ds_11.csv  sc_2_ds_12.csv  sc_2_ds_13.csv  sc_2_ds_14.csv  sc_2_ds_15.csv  sc_2_ds_16.csv  sc_2_ds_17.csv  sc_2_ds_18.csv  sc_2_ds_19.csv  sc_2_ds_2.csv  sc_2_ds_20.csv  sc_2_ds_21.csv  sc_2_ds_22.csv  sc_2_ds_23.csv  sc_2_ds_24.csv  sc_2_ds_25.csv  sc_2_ds_26.csv  sc_2_ds_27.csv  sc_2_ds_28.csv  sc_2_ds_29.csv  sc_2_ds_3.csv  sc_2_ds_30.csv  sc_2_ds_31.csv  sc_2_ds_32.csv  sc_2_ds_33.csv  sc_2_ds_34.csv  sc_2_ds_35.csv  sc_2_ds_36.csv  sc_2_ds_37.csv  sc_2_ds_38.csv  sc_2_ds_39.csv  sc_2_ds_4.csv  sc_2_ds_40.csv  sc_2_ds_41.csv  sc_2_ds_42.csv  sc_2_ds_43.csv  (+61 more)
sample_output/ca_ilp/scenario3/: sc_3_combined.csv  sc_3_ds_1.csv  sc_3_ds_10.csv  sc_3_ds_100.csv  sc_3_ds_11.csv  sc_3_ds_12.csv  sc_3_ds_13.csv  sc_3_ds_14.csv  sc_3_ds_15.csv  sc_3_ds_16.csv  sc_3_ds_17.csv  sc_3_ds_18.csv  sc_3_ds_19.csv  sc_3_ds_2.csv  sc_3_ds_20.csv  sc_3_ds_21.csv  sc_3_ds_22.csv  sc_3_ds_23.csv  sc_3_ds_24.csv  sc_3_ds_25.csv  sc_3_ds_26.csv  sc_3_ds_27.csv  sc_3_ds_28.csv  sc_3_ds_29.csv  sc_3_ds_3.csv  sc_3_ds_30.csv  sc_3_ds_31.csv  sc_3_ds_32.csv  sc_3_ds_33.csv  sc_3_ds_34.csv  sc_3_ds_35.csv  sc_3_ds_36.csv  sc_3_ds_37.csv  sc_3_ds_38.csv  sc_3_ds_39.csv  sc_3_ds_4.csv  sc_3_ds_40.csv  sc_3_ds_41.csv  sc_3_ds_42.csv  sc_3_ds_43.csv  (+61 more)
sample_output/ca_mis/: final_output.csv
sample_output/ca_mis/scenario1/: sc_1_combined.csv  sc_1_ds_1.csv  sc_1_ds_10.csv  sc_1_ds_100.csv  sc_1_ds_11.csv  sc_1_ds_12.csv  sc_1_ds_13.csv  sc_1_ds_14.csv  sc_1_ds_15.csv  sc_1_ds_16.csv  sc_1_ds_17.csv  sc_1_ds_18.csv  sc_1_ds_19.csv  sc_1_ds_2.csv  sc_1_ds_20.csv  sc_1_ds_21.csv  sc_1_ds_22.csv  sc_1_ds_23.csv  sc_1_ds_24.csv  sc_1_ds_25.csv  sc_1_ds_26.csv  sc_1_ds_27.csv  sc_1_ds_28.csv  sc_1_ds_29.csv  sc_1_ds_3.csv  sc_1_ds_30.csv  sc_1_ds_31.csv  sc_1_ds_32.csv  sc_1_ds_33.csv  sc_1_ds_34.csv  sc_1_ds_35.csv  sc_1_ds_36.csv  sc_1_ds_37.csv  sc_1_ds_38.csv  sc_1_ds_39.csv  sc_1_ds_4.csv  sc_1_ds_40.csv  sc_1_ds_41.csv  sc_1_ds_42.csv  sc_1_ds_43.csv  (+61 more)
sample_output/ca_mis/scenario2/: sc_2_combined.csv  sc_2_ds_1.csv  sc_2_ds_10.csv  sc_2_ds_100.csv  sc_2_ds_11.csv  sc_2_ds_12.csv  sc_2_ds_13.csv  sc_2_ds_14.csv  sc_2_ds_15.csv  sc_2_ds_16.csv  sc_2_ds_17.csv  sc_2_ds_18.csv  sc_2_ds_19.csv  sc_2_ds_2.csv  sc_2_ds_20.csv  sc_2_ds_21.csv  sc_2_ds_22.csv  sc_2_ds_23.csv  sc_2_ds_24.csv  sc_2_ds_25.csv  sc_2_ds_26.csv  sc_2_ds_27.csv  sc_2_ds_28.csv  sc_2_ds_29.csv  sc_2_ds_3.csv  sc_2_ds_30.csv  sc_2_ds_31.csv  sc_2_ds_32.csv  sc_2_ds_33.csv  sc_2_ds_34.csv  sc_2_ds_35.csv  sc_2_ds_4.csv  (+69 more)
sample_output/cluster_first/: final_output.csv
sample_output/comparison/: scenario1_cost_comparison.csv  scenario1_time_comparison.csv  scenario2_cost_comparison.csv  scenario2_time_comparison.csv  scenario3_cost_comparison.csv  scenario3_time_comparison.csv
sample_output/match_first/: final_output.csv
scripts/: compare_costs.py  compare_outputs.py  compare_times.py  generate_datasets.py  install_deps.sh  plot_base.py  plot_capacity.py  plot_scalability.py  plot_style.py  plot_tours.py  run_capacity_tests.sh  run_everything.sh  run_scalability_test.sh
(+827 files in other folders)
